--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ethers": "^5.4.5",
     "formik": "^2.2.0",
     "history": "^5.0.0",
+    "node-gyp": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
