--- a/relayer-config.json
+++ b/relayer-config.json
@@ -1,28 +1,32 @@
 {
   "chains": [
     {
-      "name": "eth",
+      "name": "Chikochain",
       "type": "ethereum",
       "id": "0",
-      "endpoint": "ws://localhost:8545",
-      "from": "0xff93B45308FD417dF303D6515aB04D9e89a750Ca",
+      "endpoint": "http://70.34.216.42:9933",
+      "from": "0xf5E4636000aBb8002d63ac228F82a67e18a4A4e7",
       "opts": {
-        "bridge": "0x62877dDCd49aD22f5eDfc6ac108e9a4b5D2bD88B",
-        "erc20Handler": "0x3167776db165D8eA0f51790CA2bbf44Db5105ADF",
-        "erc721Handler": "0x3f709398808af36ADBA86ACC617FeB7F5B7B193E",
-        "genericHandler": "0x2B6Ab4b880A45a07d83Cf4d664Df4Ab85705Bc07",
-        "gasLimit": "1000000",
-        "maxGasPrice": "20000000"
+        "bridge": "0x4b552F62A4Db1f31C59c93E8Cb5A112a410598Ef",
+        "erc20Handler": "0x3C4BcD08649897975123Cd8E47b2B34fB6e06D57",
+        "genericHandler": "0x3C4BcD08649897975123Cd8E47b2B34fB6e06D57",
+        "gasLimit": "4000000",
+        "maxGasPrice": "400000000000",
+        "http": "true"
       }
     },
     {
-      "name": "sub",
-      "type": "substrate",
+      "name": "Polygon",
+      "type": "ethereum",
       "id": "1",
-      "endpoint": "ws://localhost:9944",
-      "from": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
+      "endpoint": "wss://polygon-mainnet.g.alchemy.com/v2/Sziok2o64OsCpH9HP339wQdHe-akTGFi",
+      "from": "0xf5E4636000aBb8002d63ac228F82a67e18a4A4e7",
       "opts": {
-        "useExtendedCall": "true"
+        "bridge": "0x006f485B4216759cfb8979DE2E4974f74c95585D",
+        "erc20Handler": "0xaFfCFf9AA352E8f3960e2B9538164053F8C9E264",
+        "genericHandler": "0xaFfCFf9AA352E8f3960e2B9538164053F8C9E264",
+        "gasLimit": "9000000",
+        "maxGasPrice": "9000000000000"
       }
     }
   ]
